modify made my site look amazing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
 body {
     background-color: blue;
 }
+
+.new-border {
+    border: 2px solid black;
+}
+
+.title {
+    border-color: green;
+}
+
+.image {
+    border-color: purple;
+}
+
+.text1 {
+    border-color: red;
+}
+
+.text2 {
+    border-color: orange;
+}
+
+.footer {
+    border-color: aqua;
+}
+
+/*
+.new-border2 {
+    border-width: 2px;
+    border-style: solid;
+    border-color: black;
+}*/
