--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body {
 
 .title {
     border-color: green;
+    text-align: center;
+    font-size: 50px;
 }
 
 .image {
@@ -16,14 +18,19 @@ body {
 
 .text1 {
     border-color: red;
+    float: left;
+    width: 45%;
 }
 
 .text2 {
     border-color: orange;
+    float: right;
+    width: 45%;
 }
 
 .footer {
     border-color: aqua;
+    clear: both;
 }
 
 /*Navigation styling*/
@@ -39,6 +46,14 @@ body {
     float: left;
     margin:0 12px;
     cursor: pointer;
+}
+
+.img-box {
+    width: 30%;
+    height: 50px;
+    border: 2px dashed lime;
+    display: inline-block;
+    margin-right: 2%;
 }
 
 
