--- a/css2.css
+++ b/css2.css
@@ -1,3 +1,32 @@
 body {
     background-color: aqua;
 }
+
+div {
+    border: 3px solid navy;
+}
+
+.div-inline-block {
+    display: inline-block;
+    color: yellow;
+}
+
+.div-inline {
+    display: inline;
+}
+
+.div-block {
+    display: block;
+}
+
+article section:nth-child(2n) {
+    border: 2px dashed red;
+}
+
+article section:nth-child(2n+1) {
+    color: pink;
+}
+
+article section:first-of-type {
+    background-color: red;
+}
